--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
+    "@types/react-native-calendars": "^1.1264.2",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-calendars": "^1.1264.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.5.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
@@ -28,7 +31,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.15.0"
   },
   "private": true
 }
