--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/storage": "^12.6.0",
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
     "@types/react-native-calendars": "^1.1264.2",
     "expo": "~42.0.1",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
@@ -22,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-calendars": "^1.1264.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.6",
     "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.5.0",
     "react-native-vector-icons": "^8.1.0",
