--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/storage": "^12.6.0",
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.0.5",
     "@react-navigation/stack": "^6.0.4",
     "@types/react-native-calendars": "^1.1264.2",
     "expo": "~42.0.1",
