--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.5.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
