added/removed date picker modules trying to find one

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.4.0",
     "@react-native-firebase/storage": "^12.6.0",
